# nops

./: .gitignore  LICENSE  README.md  example_deeponet.py  example_gno.py  metadata.json  prepare.py  program.md  pyproject.toml  train.py
.github/workflows/: ci.yml  pypi.yml
experiments/: navier_stokes.py  vlasov_poisson.py  vlasov_poisson_2.py
models/fno/layers/: __init__.py  fno_block.py  spectral_convolution.py
models/fno/models/: original.py
nops/data/: __init__.py
nops/data/datasets/: __init__.py  base.py  burgers.py  darcy.py  heat.py  navier_stokes.py  poisson.py  wave.py
nops/data/generators/: __init__.py  base.py  burgers.py  darcy.py  heat.py  navier_stokes.py  poisson.py  wave.py
nops/data/utils/: __init__.py  gaussian_rf.py
nops/datasets/: __init__.py
nops/datasets/navier_stokes/: cli.py  generator.py
nops/deeponet/layers/: mlp.py
nops/deeponet/models/: __init__.py  deeponet.py
nops/fno/layers/: ffn.py  mlp.py  moe.py  sequential_fno_block.py  spectral_convolution.py
nops/fno/models/: moe_fno.py  original.py
nops/gno/: __init__.py
nops/gno/layers/: __init__.py  gno_block.py  integral_transform.py  mlp.py  neighbor_search.py
nops/gno/models/: __init__.py  mGNO.py  original.py
nops/gno/utils/: __init__.py  geometry.py
nops/losses/: __init__.py  base.py  boundary.py  data.py  derivatives.py  energy.py  initial.py
nops/losses/pde/: __init__.py  burgers.py  darcy.py  generic.py  heat.py  navier_stokes.py  poisson.py  wave.py
notebooks/: convert_mat_to_pt.ipynb  navier_stokes.ipynb  vlasov-poisson.ipynb
tests/: test_data.py  test_deeponet.py  test_fno.py  test_gno.py  test_losses.py  test_moe.py  test_spectral_convolution.py
