[project]
name = "nops"
version = "0.1.0"
description = "nops: Neural Operators made simple"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Abel Santillan Rodriguez", email = "abelsantillanrdz@gmail.com"},
]
dependencies = [
    "lightning>=2.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tensorly>=0.9.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
