[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nops"
version = "0.1.0"
description = "nops: Neural Operators made simple"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Abel Santillan Rodriguez", email = "abelsantillanrdz@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
urls.Homepage = "https://github.com/yourusername/nops"
urls.Repository = "https://github.com/yourusername/nops"
urls.Documentation = "https://github.com/yourusername/nops/blob/main/README.md"

dependencies = [
    "lightning>=2.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tensorly>=0.9.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
]
